k8s-projeto1-app/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default
# Dica: você pode trocar o namespace para "app" se quiser isolar;
# neste guia uso "default" para simplificar o DNS dos Services.
