k8s-projeto1-app/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  selector: { matchLabels: { app: backend } }
  template:
    metadata:
      labels: { app: backend }
    spec:
      containers:
        - name: backend
          image: sergio/backend:1.0   # você construirá esta imagem
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet: { path: /, port: 80 }
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /, port: 80 }
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  selector: { app: backend }
  ports:
    - port: 8080
      targetPort: 80
  type: ClusterIP 

  containers:
- name: backend
  image: DOCKER_USER/backend-k8s:latest
